--- a/projects/form-playground/src/styles.scss
+++ b/projects/form-playground/src/styles.scss
@@ -31,7 +31,6 @@ span {
   padding: 0;
   margin: 0;
 }
-
 body {
   font-family: 'Poppins';
   background-color: var(--color-background);
@@ -53,6 +52,14 @@ form {
   min-width: 395px;
   width: 100%;
   max-width: 450px;
+}
+
+label,
+input:not([type='checkbox']),
+fieldset,
+button {
+  width: 100%;
+  box-sizing: border-box;
 }
 
 input[type='checkbox'] {
@@ -111,7 +118,6 @@ select {
 .ng-valid.ng-dirty:not([formGroupName]):not([formArrayName]):not([ngModelGroup]):not(form):not(paper-textarea) {
   border: 2px solid var(--color-success);
 }
-
 .ng-invalid.ng-dirty:not([ngModelGroup='address']):not([formGroupName='address']):not([formArrayName]):not(form) {
   border: 2px solid var(--color-error);
 }
@@ -145,12 +151,10 @@ button[disabled] {
   @include input-message();
   color: var(--color-error);
 }
-
 .input-info {
   @include input-message();
   color: var(--color-info);
 }
-
 .review-textarea {
   border-radius: var(--border-radius);
   background-color: white;
