--- a/projects/custom-form-controls/src/lib/select/option/option.component.html
+++ b/projects/custom-form-controls/src/lib/select/option/option.component.html
@@ -1,1 +1,4 @@
-option
+<div class="option-content">
+  <ng-content></ng-content>
+</div>
+<div *ngIf="disabled" class="disabled-reason">{{ disabledReason }}</div>
