--- a/projects/form-playground/src/styles.scss
+++ b/projects/form-playground/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 // @import '@angular/cdk/overlay-prebuilt.css';
+@import '@angular/cdk/overlay-prebuilt.css';
 
 :root {
   --color-primary: #004859;
@@ -115,10 +116,14 @@ select {
   width: 100%;
 }
 
-.ng-valid.ng-dirty:not([formGroupName]):not([formArrayName]):not([ngModelGroup]):not(form):not(paper-textarea) {
+.ng-valid.ng-dirty:not([formGroupName]):not([formArrayName]):not([ngModelGroup]):not(
+    form
+  ):not(paper-textarea) {
   border: 2px solid var(--color-success);
 }
-.ng-invalid.ng-dirty:not([ngModelGroup='address']):not([formGroupName='address']):not([formArrayName]):not(form) {
+.ng-invalid.ng-dirty:not([ngModelGroup='address']):not([formGroupName='address']):not(
+    [formArrayName]
+  ):not(form) {
   border: 2px solid var(--color-error);
 }
 
