--- a/projects/form-playground/src/app/core/header/header.component.html
+++ b/projects/form-playground/src/app/core/header/header.component.html
@@ -1,9 +1,26 @@
 <header class="header">
   <div class="nav">
-    <a class="nav-link" routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{ exact: true }">Template-Driven Forms</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/reactive-forms">Reactive Forms</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/custom-rating-picker">Custom Rating Picker</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select">Custom Select</a>
-    <a class="nav-link" routerLinkActive="active" routerLink="/dynamic-forms">Dinamic Forms</a>
+    <a
+      class="nav-link"
+      routerLinkActive="active"
+      routerLink="/"
+      [routerLinkActiveOptions]="{ exact: true }"
+      >Template-Driven Forms</a
+    >
+    <a class="nav-link" routerLinkActive="active" routerLink="/reactive-forms"
+      >Reactive Forms</a
+    >
+    <a class="nav-link" routerLinkActive="active" routerLink="/custom-rating-picker"
+      >Custom Rating Picker</a
+    >
+    <a class="nav-link" routerLinkActive="active" routerLink="/custom-select"
+      >Custom Select</a
+    >
+    <a class="nav-link" routerLinkActive="active" routerLink="/dynamic-forms"
+      >Dinamic Forms</a
+    >
+    <a class="nav-link" routerLinkActive="active" routerLink="/ngrx-practive"
+      >NgRx Practice</a
+    >
   </div>
 </header>
