--- a/projects/alportfolio/src/styles.scss
+++ b/projects/alportfolio/src/styles.scss
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import '@angular/cdk/overlay-prebuilt.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+  margin: 0;
+}
+
+.app-primary {
+  --bg-color: #4378db;
+  --text-color: #faf0e6;
+}
+.app-secondary {
+  --bg-color: rgb(249, 186, 11);
+  --text-color: #333;
+}
